k8s/base/network-policies/restrict-postgres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-postgres-ingress
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: auth-service
        - podSelector:
            matchLabels:
              app: typing-service
        - podSelector:
            matchLabels:
              app: credential-manager
        - podSelector:
            matchLabels:
              app: stats-service
        - podSelector:
            matchLabels:
              app: monitoring-service
        - podSelector:
            matchLabels:
              app: db-init
        - podSelector:
            matchLabels:
              app: pgbouncer
        - podSelector:
            matchLabels:
              app: postgres-dump
        - podSelector:
            matchLabels:
              app: postgres-retention
      ports:
        - port: 5432
          protocol: TCP
